--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,151 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
+  margin: 0 ;
   padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+
+.cardStyle{
+display: flex;
+flex-direction: column;
+background-color: #ffcc86;
+border-radius: 30px;
+padding: 1rem;
+height: 54vh;
+width: 20vw;
+
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.GameInterfaceStyle {
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  column-gap: 40px;
+  grid-template-rows: auto;
+  margin: auto;
+
+}
+/* for smaller screens */
+@media screen and (max-width: 500px) {
+  .GameInterfaceStyle {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    column-gap: 20px; 
+    row-gap: 20px; 
+   
   }
-  to {
-    transform: rotate(360deg);
+
+}
+@media screen and (max-width: 768px) {
+  .GameInterfaceStyle {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    column-gap: 40px; 
+    row-gap: 20px; 
+   
+  }
+  .cardStyle{
+    padding: 1rem;
+    height: 48vh;
+    width: 30vw;
+  }
+
+}
+
+@media screen and (max-width : 476px) and (max-width: 978px){
+  .cardStyle{
+    padding: 1rem;
+    height: 40vh;
+    width: 30vw;
+
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+.loginForm {
+display: flex;
+align-items: center;
+background-size:contain;
+background-position: center;
+background-repeat: no-repeat;
+background-image: url("KittensImage.jpeg");
+height: 100vh;
+width: 95vw;
+
+}
+@media screen and (max-width: 476px) and (max-width: 978px) {
+  .loginForm {
+    display: flex;
+    align-items: center;
+    background-size:contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url("KittensImage.jpeg");
+    height: 100vh;
+    width: 95vw;
+    
+    }
+}
+
+.loginForm form{
+ 
+   display: grid;
+   grid-template-columns: repeat(2 , 1fr);
+   grid-template-rows: repeat(2 , 1fr);
+   font-size: x-large;
+   font-weight: bolder;
+   z-index: 2;
+   margin-left: 55vw;
+   margin-top: 40vh;
+ }
+ @media screen and (max-width: 476px) and (max-width: 978px) {
+  .loginForm  form{
+      display: grid;
+   grid-template-columns: repeat(2 , 1fr);
+   grid-template-rows: repeat(2 , 1fr);
+   margin-left: 25vw;
+   margin-top: 20vh;
+    
+    }
+}
+
+
+ .loginForm input{
+  border-radius: 5px;
+  height: 40px;
+  width: auto;
+  z-index:3;
+  
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  
+  @media screen and (max-width: 476px)  {
+    .loginForm  input{
+      display: flex;
+      height: 20px;
+      width: auto;
+      
+      }
+      .loginForm  label{
+        font-size: 1.2rem;
+       
+       }
+  
+  }
+  
+  .navbar {
+    position: fixed;
+    top: 0 ;
+    
+  }
+  
+.modal {
+  z-index: 100;
+  margin-left: 40%;
+  position: absolute;
+  display: flex ;
+  align-items: center;
+  justify-content: center;
+  background-color:	rgb(122, 31, 31 , 0.8);
+  box-shadow: black 20px;
+  padding: 2%;
+  border-radius: 10px;
 }
