--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,13 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color:white;
   text-decoration: inherit;
+  font-size: 2rem;
+
 }
 a:hover {
-  color: #535bf2;
+  color: black;
 }
 
 body {
@@ -48,7 +50,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: white;
 }
 button:focus,
 button:focus-visible {
