--- a/src/App.css
+++ b/src/App.css
@@ -20,9 +20,11 @@ width: 20vw;
 .GameInterfaceStyle {
   display: grid;
   grid-template-columns: repeat(4,1fr);
+  grid-template-rows: repeat(2,1fr);
   column-gap: 40px;
+  row-gap: 20px;
   grid-template-rows: auto;
-  margin: auto;
+  margin-top: 70px;
 
 }
 /* for smaller screens */
@@ -148,12 +150,14 @@ width: 95vw;
 
 .modal {
   z-index: 100;
-  margin-left: 40%;
+  margin-left: 10%;
   position: absolute;
   display: flex ;
   align-items: center;
   justify-content: center;
-  background-color:	rgb(122, 31, 31 , 0.8);
+  background-color:	rgb(122, 31, 31 );
   padding: 2%;
   border-radius: 10px;
+  box-shadow:2px 2px 6px 0 black ;
+  width: 70vw;
 }
